# Epitech-Principe-financier-de-base-et-architecture

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Network.hpp  Network.inl  README.md  docker-compose.yml  schema.drawio
include/: InsertMap.hpp  InsertMap.inl  OrderBook.hpp  OrderBook.inl
include/Client/: Context.hpp  Core.hpp  History.hpp  meta.hpp
include/Client/Core/: Core.hpp
include/Client/Data/: IProcessor.hpp  OderBook.hpp  OrderBook.hpp  OrderBook.inl  UDPHandler.hpp  UserInput.hpp
include/Client/GUI/: GestionnaireSocket.hpp  ThreadHeartBeat.hpp  ThreadSocket.hpp  ThreadSocketTCP.hpp  ThreadSocketUDP.hpp  mainwindow.hpp
include/Client/Handler/: Handler.hpp  Handler.inl  TCPHandler.hpp  UDPHandler.hpp  UserInput.hpp
include/Client/Processor/: IProcessor.hpp  OBData.hpp  OrderBook.hpp  OrderBook.inl  ReportHandler.hpp  User.hpp
include/Client/Processor/Common/: DataRequest.hpp  DataRequest.inl
include/Common/Container/: InsertMap.hpp  InsertMap.inl
include/Common/Core/: Logger.hpp  Logger.inl  Order.hpp  Utils.hpp  Utils.inl  meta.hpp
include/Common/Message/: ExecutionReport.hpp  Fix.hpp  Fix.inl  Header.hpp  HeartBeat.hpp  Logon.hpp  Logout.hpp  MarketDataIncrementalRefresh.hpp  MarketDataRequest.hpp  MarketDataSnapshotFullRefresh.hpp  Message.hpp  NewOrderList.hpp  NewOrderSingle.hpp  OrderCancelReject.hpp  OrderCancelReplaceRequest.hpp  OrderCancelRequest.hpp  OrderStatusRequest.hpp  Reject.hpp  Serializer.hpp  Tag.hpp  Tag.inl  Utils.hpp  Utils.inl
include/Common/Network/: Acceptor.hpp  Acceptor.inl  CEPoll.hpp  CSocket.hpp  Ip.hpp  Ip.inl  Selector.hpp  Selector.inl  Socket.hpp  UDPPackage.hpp
include/Common/Thread/: Pool.hpp  Pool.inl  Queue.hpp  Queue.inl
include/Container/: InsertMap.hpp  InsertMap.inl
include/Core/: ClientSocket.hpp  Core.hpp  Logger.hpp  Logger.inl  OrderBook.hpp  OrderBook.inl  meta.hpp
include/Core/Pipeline/: Action.hpp  Core.hpp  Core.inl  InNetwork.hpp  InNetwork.inl  Market.hpp  Naming.hpp  Network.hpp  Network.inl  OutNetwork.hpp  OutNetwork.inl
include/Message/: Fix.hpp  Header.hpp  HeartBeat.hpp  Logon.hpp  Logout.hpp  MarketDataSnapshotFullRefresh.cpp  MarketDataSnapshotFullRefresh.hpp  NewOrderList.hpp  NewOrderSingle.hpp  OrderCancelReplaceRequest.hpp  OrderStatusRequest.hpp  Serializer.hpp
include/Network/: Acceptor.hpp  Acceptor.inl  CEPoll.hpp  CSocket.hpp  Ip.hpp  Ip.inl  Selector.hpp  Selector.inl  Socket.hpp
include/Server/Core/: ClientSocket.hpp  Core.hpp  MarketContainer.hpp  Order.hpp  OrderBook.hpp  OrderBook.inl  meta.hpp
include/Server/Core/Pipeline/: Action.hpp  Core.hpp  Core.inl  DataRefresh.hpp  InNetwork.hpp  InNetwork.inl  Market.hpp  Naming.hpp  Notification.hpp  OBEvent.hpp  OutNetwork.hpp  OutNetwork.inl  UDPOutNetwork.hpp
include/Server/Network/: Processor.hpp
include/Thread/: Pool.hpp  Pool.inl  Queue.hpp  Queue.inl
include/Utils/: Utils.hpp
python_testing/: BLOCKING_TEST.py  BLOCKING_TEST2.py  CLIENT_1_TEST1-EQUAL.py  CLIENT_1_TEST1.py  CLIENT_1_TEST2.py  CLIENT_1_TEST4.py  CLIENT_1_TEST5.py  CLIENT_1_TEST6.py  CLIENT_2_TEST1-EQUAL.py  CLIENT_2_TEST1.py  CLIENT_2_TEST2.py  CLIENT_2_TEST3.py  CLIENT_2_TEST4.py  CLIENT_2_TEST5.py  CLIENT_2_TEST6.py  TEST1.py  TEST2.py  TEST3.py  cli.py  func_test_1.py  func_test_2.py  server.py  stress_test.py  stress_test2.py  stress_test3.py  test_assert_1.py  test_assert_2.py  test_assert_3.py  test_assert_4.py  test_data_basic2.py  test_data_market_basics.py  test_data_market_full.py  test_logon_logout.py  test_logon_new_order_bad_value.py  test_logon_new_order_missing_logout.py  udp_test.py
src/: OrderBook.cpp  main.cpp
src/Client/: Context.cpp  Core.cpp  History.cpp  main.cpp
src/Client/Core/: Core.cpp
src/Client/Data/: OderBook.cpp  UDPHandler.cpp  UserInput.cpp
src/Client/GUI/: FinanceUI.ui  GestionnaireSocket.cpp  ThreadHeartBeat.cpp  ThreadSocket.cpp  ThreadSocketTCP.cpp  ThreadSocketUDP.cpp  mainwindow.cpp
src/Client/Handler/: TCPHandler.cpp  UDPHandler.cpp  UserInput.cpp
src/Client/Processor/: OBData.cpp  OderBook.cpp  ReportHandler.cpp  User.cpp
src/Client/Processor/Common/: DataRequest.hpp
src/Common/Core/: Logger.cpp  Order.cpp  UDPPackage.cpp  Utils.cpp
src/Common/Message/: ExecutionReport.cpp  Fix.cpp  Header.cpp  HeartBeat.cpp  Logon.cpp  Logout.cpp  MarketDataIncrementalRefresh.cpp  MarketDataRequest.cpp  MarketDataSnapshotFullRefresh.cpp  NewOrderList.cpp  NewOrderSingle.cpp  OrderCancelReject.cpp  OrderCancelReplaceRequest.cpp  OrderCancelRequest.cpp  OrderStatusRequest.cpp  Reject.cpp  Serializer.cpp  Serializer.hpp  Utils.cpp
src/Common/Network/: CEPoll.cpp  CSocket.cpp  Ip.cpp  Socket.cpp
src/Core/: ClientSocket.cpp  Core.cpp  Logger.cpp  OrderBook.cpp
src/Core/Pipeline/: Action.cpp  Market.cpp  Naming.cpp  OutNetwork.cpp
src/Message/: Fix.cpp  Header.cpp  HeartBeat.cpp  Logon.cpp  Logout.cpp  MarketDataIncrementalRefresh.cpp  MarketDataRequest.cpp  NewOrderList.cpp  NewOrderSingle.cpp  OrderCancelReplaceRequest.cpp  OrderCancelRequest.cpp  OrderStatusRequest.cpp  Serializer.cpp  Serializer.hpp
src/Network/: CEPoll.cpp  CSocket.cpp  Selector.cpp  Socket.cpp
src/Server/: Order.cpp  main.cpp
src/Server/Core/: ClientSocket.cpp  Core.cpp  MarketContainer.cpp  OrderBook.cpp
src/Server/Core/Pipeline/: Action.cpp  DataRefresh.cpp  Market.cpp  Naming.cpp  Notification.cpp  OBEvent.cpp  OBEvent.hpp  OutNetwork.cpp  UDPOutNetwork.cpp
src/Server/Network/: Processor.cpp
src/Utils/: Utils.cpp
test/Network/: Selector.cpp  tcpSocket.cpp
test/messages/: test_checksum.cpp  test_formater.cpp  test_header.cpp  test_logon.cpp  test_utils.cpp
